[package]
name = "bitsock"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "Safe Rust crate for creating socket servers and clients with ease."
repository = "https://github.com/LolzDEV/bitsock"
readme = "README.md"
keywords = ["socket", "networking", "client", "server", "tcp"]
categories = ["network-programming", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
byteorder = "1.4.3"